sand-macros/tests/cases/fail_unsupported_if.rs
use sand_macros::function;

#[function]
fn bad() {
    if true {
        cmd::say("hello")
    } else {
        cmd::say("goodbye")
    };
}

fn main() {}
